--- a/index.html
+++ b/index.html
@@ -25,5 +25,22 @@
 
     <title>Omnifood</title>
   </head>
-  <body></body>
+  <body>
+    <section class="section-hero">
+      <div class="hero-text-box">
+        <h1 class="heading-primary">
+          A healthy meal delivered to your door, every single day
+        </h1>
+      </div>
+      <div class="hero-image-box">
+        <img src="./img/hero.png" alt="" />
+      </div>
+
+      <p class="hero-description">
+        The smart 365-days-per-year food subscription that will make you eat
+        healthy again. Tailored to your personal tastes and nutritional needs.
+        We have delivered 250,000+ meals last year!
+      </p>
+    </section>
+  </body>
 </html>
