--- a/index.html
+++ b/index.html
@@ -5,42 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" /> -->
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
       rel="stylesheet"
-    />
+    /> -->
 
-    <link rel="stylesheet" href="css/general.css" />
+    <!-- <link rel="stylesheet" href="css/general.css" /> -->
     <link rel="stylesheet" href="css/style.css" />
 
-    <script
+    <!-- <script
       type="module"
       src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
+    ></script> -->
+    <!-- <script
       nomodule=""
       src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"
-    ></script>
+    ></script> -->
 
     <title>Omnifood</title>
   </head>
   <body>
     <section class="section-hero">
-      <div class="hero-text-box">
-        <h1 class="heading-primary">
-          A healthy meal delivered to your door, every single day
-        </h1>
-      </div>
-      <div class="hero-image-box">
-        <img src="./img/hero.png" alt="" />
-      </div>
+      <div class="hero">
+        <div class="hero-text-box">
+          <h1 class="heading-primary">
+            A healthy meal delivered to your door, every single day
+          </h1>
+          <p class="hero-description">
+            The smart 365-days-per-year food subscription that will make you eat
+            healthy again. Tailored to your personal tastes and nutritional
+            needs. We have delivered 250,000+ meals last year!
+          </p>
 
-      <p class="hero-description">
-        The smart 365-days-per-year food subscription that will make you eat
-        healthy again. Tailored to your personal tastes and nutritional needs.
-        We have delivered 250,000+ meals last year!
-      </p>
+          <a href="#" class="btn">Start eating well</a>
+          <a href="#" class="btn btn-secondary">learn more &darr;</a>
+        </div>
+        <div class="hero-image-box">
+          <img
+            src="./img/hero.png"
+            alt="Women Enjoying Food,Meals,storage,container"
+            class="hero-img"
+          />
+        </div>
+      </div>
     </section>
   </body>
 </html>
